--- a/css/style.css
+++ b/css/style.css
@@ -403,3 +403,9 @@ text-align: center;
 width: 20%;
 min-width: 4em;
 }
+
+
+.subpage-hd {
+    background-image: linear-gradient( 135deg, #e7bf2e 10%, #d44a4a 100%);
+    height: 44px;
+}
